Final edits and essay uploaded.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
-Narrative Visualization.docx
+Narrative Visualization_Xinhao Liu.docx
+Narrative Visualization_Xinhao Liu.pdf
+Narrative Visualization Essay_Xinhao Liu.docx
